--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vollkorn:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap');
 
 html, body {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     padding: 0;
@@ -22,7 +24,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     width: calc(100% - 40px);
-    height: calc(100% - 40px);
+    min-height: 96%;
     margin: 20px;
 }
 
@@ -106,3 +108,91 @@ button {
     font-weight: 400;
     line-height: 22px;
 }
+
+#About {
+    display: flex;
+    flex: 1;
+    flex-flow: row wrap;
+    justify-content:space-evenly;
+    padding-right: 20px;
+}
+
+.AboutCard {
+    display: flex;
+    flex: 1;
+    flex-basis: 901.5px;
+    height: 600px;
+    padding: 0px 0px 20px 20px;
+    justify-content: space-between;
+}
+
+#Desk1 {
+    flex: 1;
+}
+
+.AboutCardText {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 150px 100px 0px 100px;
+    text-align: center;
+    background-color: whitesmoke;
+    background-size: cover;
+}
+
+.AboutCardText h2 {
+    font-size: 46px;
+    margin: 5px;
+}
+
+.AboutCardText h6 {
+    font-size: 16px;
+    font-weight: 300;
+    font-family: 'Vollkorn', serif;
+    font-style: italic ;
+    margin: 5px 0px 30px;
+}
+
+.AboutCardText p {
+    font-size: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #5c5c5c;
+}
+
+.AboutCardText button {
+    font-family: 'Montserrat', sans-serif;
+    background-color: transparent;
+    width: 170px;
+    align-self: center;
+    margin: 50px;
+}
+
+.AboutCardText button:hover {
+    border: none;
+    background-color: #5c5c5c;
+    color: white;
+}
+
+.AboutFooter {
+    display: flex;
+    flex: 1;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 40px 0px 40px 0px;
+}
+
+.AboutFooter h2 {
+    font-size: 38px;
+    padding: 0;
+    margin: 0;
+}
+
+.AboutFooter h6 {
+    font-size: 16px;
+    font-weight: 300;
+    font-family: 'Vollkorn', serif;
+    font-style: italic ;
+    margin: 5px 0px 30px;
+}
+
+
