adds to services

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vollkorn:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap');
 
+/*
+    Home
+*/
+
 html, body {
     display: flex;
     flex-direction: column;
@@ -11,6 +15,7 @@ html, body {
     margin: 0;
     background-color: white;
     font-family: 'Montserrat', sans-serif;
+    color: #333333;
 }
 
 h1, h6, p {
@@ -109,6 +114,10 @@ button {
     line-height: 22px;
 }
 
+/*
+    About Section
+*/
+
 #About {
     display: flex;
     flex: 1;
@@ -195,4 +204,78 @@ button {
     margin: 5px 0px 30px;
 }
 
+#Services {
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    padding: 0px;
+}
 
+.Service-container {
+    display: flex;
+    padding: 0;
+}
+
+.ServiceCard-container {
+    display: flex;
+    flex: 1;
+    flex-basis: 901.5px;
+    height: 600px;
+    padding: 0px 20px 20px 20px;
+    justify-content: space-between;
+}
+
+.ServiceCards {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-evenly;    
+}
+
+.ServiceCard {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    flex-basis: 400px;
+    padding: 0px 20px 20px 20px;  
+}
+
+.ServiceCardText {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 50px 50px 50px 50px;
+    text-align: center;
+    background-color: whitesmoke;
+    background-size: cover;
+}
+
+.ServiceCardText h2 {
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.ServiceCardText p {
+    font-family: ;
+}
+
+.AboutCards {
+    display: flex;
+}
+
+.ServiceCardText img {
+    width: 125px;
+    align-self: center;
+}
+
+.one:hover {
+    background-color: rgba(104, 64, 24, 0.15);
+}
+
+.two:hover {
+    background-color: rgba(185, 58, 35, 0.15);
+}
+
+.three:hover {
+    background-color: rgba(104, 64, 24, 0.15);
+}
